# berkshire-genai-signal-engine

./: .env.example  .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: secrets.toml.example
data/letters/: 2020.txt  2021.txt  2022.txt  2023.txt  2024.txt  2025.txt
data/reliability/: 2024_runs.json
data/signals/: 2020.json  2021.json  2022.json  2023.json  2024.json  2025.json
docs/: EXAMPLE_EXTRACTION.json  SCORING_GUIDE.md
scripts/: build_dataset.py  extract_all.py  test_reliability.py
src/: __init__.py  analyzer.py  config.py  dataset.py  efficacy.py  extractor.py  market.py  prompts.py  reliability.py  schema.py  sentiment.py  statistics.py  stock.py  valuation.py
